fix dp overflowing

--- a/styles/index.css
+++ b/styles/index.css
@@ -85,10 +85,11 @@ section {
     align-items: center;
     flex-direction: column;
     gap: 20px;
+    overflow: hidden;
 }
 
 .pic-sec .photo .img-fluid {
-    max-width: 400px;
+    max-width: 360px;
     object-fit: cover;
     border-radius: 40%;
 }
